# XJTU-MealFlow

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cd.yml  ci.yml
ascii-arts/: mealflow.txt  xjtu-mealflow.txt
data/: merchant-classification.yaml
docs/: export_csv.md
frontend/: .cta.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/.cursor/rules/: use-shadcn.mdc
frontend/src/: routeTree.gen.ts
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: analysis-utils.ts  api.ts  types.ts
frontend/src/routes/: __root.tsx  analysis.tsx  index.tsx  settings.tsx  transactions.tsx
src/: actions.rs  app.rs  cli.rs  config.rs  fetcher.rs  main.rs  page.rs  server.rs  transactions.rs  tui.rs
src/app/: layer_manager.rs
src/component/: input.rs  mod.rs
src/component/snapshots/: xjtu_mealflow__component__input__test__render-2.snap  xjtu_mealflow__component__input__test__render.snap
src/libs/: export_csv.rs  fetcher.rs  mod.rs  transactions.rs
src/libs/snapshots/: xjtu_mealflow__libs__fetcher__test_utils__test__get_mock_data.snap
src/page/: analysis.rs  cookie_input.rs  fetch.rs  help_popup.rs  home.rs  transactions.rs
src/page/analysis/: merchant.rs  merchant_type.rs  time_period.rs  time_series.rs
src/page/snapshots/: xjtu_mealflow__page__analysis__test__render-2.snap  xjtu_mealflow__page__analysis__test__render-3.snap  xjtu_mealflow__page__analysis__test__render.snap  xjtu_mealflow__page__analysis__test__render_merchant-2.snap  xjtu_mealflow__page__analysis__test__render_merchant.snap  xjtu_mealflow__page__analysis__test__render_merchant_category.snap  xjtu_mealflow__page__analysis__test__render_time_period.snap  xjtu_mealflow__page__fetch__test__render.snap  (+10 more)
src/server/: api.rs
src/snapshots/: xjtu_mealflow__app__test__app_render.snap  xjtu_mealflow__app__test__app_stacked_render.snap
src/utils/: errors.rs  help_msg.rs  key_events.rs  merchant_class.rs  mod.rs
test/mock-data/: api-resp.json  config.yaml  mock-transactions.json
(+12 files in other folders)
