[package]
name = "xjtu_mealflow"
version = "0.1.0"
authors = ["Yi Yang <yy4382@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
futures = "0.3.31"
tokio-util = "0.7.14"
log = "0.4.26"
signal-hook = "0.3.17"
dotenv = "0.15.0"
tracing = "0.1.41"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.1"
libc = "0.2.171"
tui-input = "0.11.1"
lazy_static = "1.5.0"
derive_deref = "1.1.1"
directories = "6.0.0"
config = "0.15.11"
json5 = "0.4.1"
tempfile = "3.19.1"
