[package]
name = "xjtu_mealflow"
version = "0.1.0"
authors = ["Yi Yang <yy4382@outlook.com>"]
license = "MIT"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.34.0", features = ["bundled"] }
futures = "0.3.31"
tokio-util = "0.7.14"
signal-hook = "0.3.17"
dotenv = "0.15.0"
tracing = "0.1.41"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.1"
libc = "0.2.171"
tui-input = "0.11.1"
lazy_static = "1.5.0"
directories = "6.0.0"
config = "0.15.11"
json5 = "0.4.1"
tempfile = "3.19.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
human-panic = "2.0.2"
temp-env = "0.3.6"
rand = "0.9.0"
mockito = "1.7.0"

[dev-dependencies]
insta = "1.42.2"
